# sunclub

./: .actrc  .editorconfig  .gitignore  .rumdl.toml  AGENTS.md  DESIGN.md  LICENSE  NOTICE  README.md  README_benchmark.md  SPEC.md  hk.pkl  hk.toml  justfile  mise.toml  pyproject.toml  renovate.json
.DerivedData/: info.plist
.github/: zizmor.yml
Benchmarks/: README.md  dataset_manifest.json  eval_summary.json  final_report.md  manual_review_sample.jsonl  run_feature_print_benchmark.swift  slice_metrics.csv  val_scores.jsonl
app/: .gitignore  .swiftlint.yml  Gemfile  Project.swift  Project.swift.bak  README.md  SPEC.md  Tuist.swift  Workspace.swift
docs/: accessibility-scorecard-execplan.md  accountability-friends-execplan.md  achievements-expansion-execplan.md  app-automation.md  app-store-first-submission-execplan.md  app-store-readiness-improvements-execplan.md  app-store-review-automation-execplan.md  app-store-review-package.md  app-store-submission.md  automation-contract.md  automation-shortcuts-deeplinks-execplan.md  ci-release-hardening-execplan.md  ci-release-stability.md  cloudflare-deployment-execplan.md  cloudkit-setup.md  daily-routine-audit-execplan.md  dark-mode-execplan.md  fastvlm-model-upgrade-and-finetuning.md  fastvlm-test-target-execplan.md  growth-features-execplan.md  history-edit-backfill-execplan.md  home-automation-clarity-improvements-execplan.md  home-exit-reminders-execplan.md  icloud-cross-device-sync-execplan.md  icloud-sync-recovery-execplan.md  improvements-batch-2026-04-09.md  live-uv-device-validation-execplan.md  (+29 more)
(+2816 files in other folders)
