[project]
name = "sunclub"
version = "0.1.0"
description = "Build, validation, and App Store tooling for the Sunclub app"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]
eval = [
  "anthropic>=0.40.0",
  "pillow>=10.0",
  "yt-dlp>=2024.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
